[gd_scene load_steps=16 format=3 uid="uid://dqrmukxmemk4n"]

[ext_resource type="FontFile" uid="uid://mic3721t4goo" path="res://assets/fonts/6px-Normal.ttf" id="1_0j1jv"]
[ext_resource type="Texture2D" uid="uid://crx1k08qbk2uh" path="res://assets/sprites/buttons/start_button_temp.png" id="1_v6q4g"]
[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_v8w2w"]
[ext_resource type="Texture2D" uid="uid://bapnnb7ibc3qc" path="res://assets/sprites/buttons/start_button_hover_temp.png" id="2_hwsae"]
[ext_resource type="Texture2D" uid="uid://jele44o4boh7" path="res://assets/sprites/buttons/quit_button_temp.png" id="3_j12et"]
[ext_resource type="Texture2D" uid="uid://kwc2jjawqo53" path="res://assets/sprites/buttons/quit_button_hover_temp.png" id="4_otau6"]
[ext_resource type="AudioStream" uid="uid://3s8f8d0ey3q5" path="res://assets/music/groovy.wav" id="7_pv2wr"]
[ext_resource type="AudioStream" uid="uid://cor26gmtcwr5p" path="res://assets/music/sfx/select.wav" id="8_vw05y"]
[ext_resource type="Texture2D" uid="uid://b6ou3u7f4wlhi" path="res://assets/sprites/volume.png" id="9_h3pt5"]

[sub_resource type="LabelSettings" id="LabelSettings_3fe3t"]
line_spacing = 0.0
font = ExtResource("1_0j1jv")
font_size = 12

[sub_resource type="Animation" id="Animation_yolxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fmu5f"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_myb65"]
resource_name = "fade_to_normal"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvx1u"]
_data = {
"RESET": SubResource("Animation_yolxe"),
"fade_to_black": SubResource("Animation_fmu5f"),
"fade_to_normal": SubResource("Animation_myb65")
}

[sub_resource type="LabelSettings" id="LabelSettings_a0k50"]
line_spacing = 0.0
font = ExtResource("1_0j1jv")
font_size = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8w2w")

[node name="Container" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Container"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.515625
anchor_top = 0.46875
anchor_right = 0.515625
anchor_bottom = 0.46875
offset_left = -29.0
offset_top = -31.0
offset_right = 29.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("1_0j1jv")
text = "Peace to the Meadow"
label_settings = SubResource("LabelSettings_3fe3t")
horizontal_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Play" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 26.0
offset_top = 39.0
offset_right = 38.0
offset_bottom = 51.0
texture_normal = ExtResource("1_v6q4g")
texture_hover = ExtResource("2_hwsae")

[node name="Quit" type="TextureButton" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 36.0
offset_top = 39.0
offset_right = 48.0
offset_bottom = 51.0
texture_normal = ExtResource("3_j12et")
texture_hover = ExtResource("4_otau6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qvx1u")
}

[node name="HSlider" type="HSlider" parent="."]
texture_filter = 2
layout_mode = 0
offset_left = 13.0
offset_top = 52.0
offset_right = 173.0
offset_bottom = 68.0
scale = Vector2(0.25, 0.25)
rounded = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 50.0
offset_right = 21.0
offset_bottom = 62.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_h3pt5")
stretch_mode = 1

[node name="Best" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 56.0
offset_right = 53.0
offset_bottom = 72.0
text = "Best time: 0 days"
label_settings = SubResource("LabelSettings_a0k50")

[node name="Fade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pv2wr")
autoplay = true

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vw05y")

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
